--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://vk.com/js/api/xd_connection.js?2"  type="text/javascript"></script>
     </head>
     <body>
         <div>test</div>
+        <script type="text/javascript"> 
+  VK.init(function() { 
+   console.log('test ok');
+  }, function() { 
+     console.log('test');
+}, '5.74'); 
+</script>
     </body>
 </html>
